--- a/index.html
+++ b/index.html
@@ -1,2 +1,71 @@
 <!DOCTYPE html>
-<html>Hello ?</html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Aaron Uwem Edem's Profile Page">
+    <meta name="author" content="Aaron Uwem Edem">
+    <title>Aaron Uwem Edem - Profile</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <script defer src="scripts/main.js"></script>
+</head>
+
+<body>
+    <header>
+        <div class="profile-header">
+            <img src="images/myself.jpg" alt="Profile of Aaron Uwem Edem">
+            <h1>Aaron Uwem Edem</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Chamber</a></li>
+                <li><a href="https://github.com/ugedem" target="_blank">GitHub Profile</a></li>
+                <li><a href="https://www.linkedin.com/in/aaron-edem-42874a22b" target="_blank">LinkedIn</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="grid-container">
+            <div class="course-work">
+                <h2>Course Work</h2>
+                <ul>
+                    <li>Task 1</li>
+                    <li>Task 2</li>
+                    <li>Task 3</li>
+                </ul>
+            </div>
+
+            <div class="location">
+                <h2>Ibadan, Nigeria</h2>
+                <img src="images/nigeria-flag.jpg" alt="Nigerian Flag">
+            </div>
+
+            <div class="courses-section">
+                <h2>Web and Computer Programming Certificate</h2>
+                <div class="course-filters">
+                    <button id="all-courses">All</button>
+                    <button id="cse-courses">CSE</button>
+                    <button id="wdd-courses">WDD</button>
+                </div>
+                <div class="courses">
+                    <div class="course-card cse">CSE 110</div>
+                    <div class="course-card wdd">WDD 130</div>
+                    <div class="course-card cse">CSE 111</div>
+                    <div class="course-card cse">CSE 210</div>
+                    <div class="course-card wdd">WDD 131</div>
+                    <div class="course-card wdd">WDD 231</div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; <span id="currentyear"></span> Aaron Uwem Edem | Nigeria</p>
+        <p id="lastModified">Last Update:</p>
+    </footer>
+</body>
+
+</html>
