--- a/index.html
+++ b/index.html
@@ -4,61 +4,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Aaron Uwem Edem's Profile Page">
+    <meta name="description" content="Aaron's Profile Page">
     <meta name="author" content="Aaron Uwem Edem">
     <title>Aaron Uwem Edem - Profile</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script defer src="scripts/main.js"></script>
 </head>
 
 <body>
     <header>
         <div class="profile-header">
-            <img src="images/myself.jpg" alt="Profile of Aaron Uwem Edem">
+            <img src="images/myself.jpg" alt="Aaron Uwem Edem Profile">
             <h1>Aaron Uwem Edem</h1>
         </div>
         <nav>
-            <ul>
+            <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Chamber</a></li>
                 <li><a href="https://github.com/ugedem" target="_blank">GitHub Profile</a></li>
                 <li><a href="https://www.linkedin.com/in/aaron-edem-42874a22b" target="_blank">LinkedIn</a></li>
             </ul>
+            <button class="hamburger">&#9776;</button>
         </nav>
     </header>
 
     <main>
-        <section class="grid-container">
-            <div class="course-work">
-                <h2>Course Work</h2>
-                <ul>
-                    <li>Task 1</li>
-                    <li>Task 2</li>
-                    <li>Task 3</li>
-                </ul>
-            </div>
+        <section class="course-work">
+            <h2>Course Work</h2>
+            <ul>
+                <li>Task 1</li>
+                <li>Task 2</li>
+                <li>Task 3</li>
+            </ul>
+        </section>
 
-            <div class="location">
-                <h2>Ibadan, Nigeria</h2>
-                <img src="images/nigeria-flag.jpg" alt="Nigerian Flag">
-            </div>
+        <section class="location">
+            <h2>Ibadan, Nigeria</h2>
+            <img src="images/pngwing.com.png" alt="Nigeria">
+            <p>Naija Flag</p>
+        </section>
 
-            <div class="courses-section">
-                <h2>Web and Computer Programming Certificate</h2>
-                <div class="course-filters">
-                    <button id="all-courses">All</button>
-                    <button id="cse-courses">CSE</button>
-                    <button id="wdd-courses">WDD</button>
-                </div>
-                <div class="courses">
-                    <div class="course-card cse">CSE 110</div>
-                    <div class="course-card wdd">WDD 130</div>
-                    <div class="course-card cse">CSE 111</div>
-                    <div class="course-card cse">CSE 210</div>
-                    <div class="course-card wdd">WDD 131</div>
-                    <div class="course-card wdd">WDD 231</div>
-                </div>
+        <section class="certificate">
+            <h2>Web and Computer Programming Certificate</h2>
+            <div class="course-filters">
+                <button id="all-courses">All</button>
+                <button id="cse-courses">CSE</button>
+                <button id="wdd-courses">WDD</button>
             </div>
+            <div class="courses">
+                <!-- Courses will be dynamically generated here -->
+            </div>
+            <p>Total Credits: <span id="total-credits"></span></p>
         </section>
     </main>
 
@@ -66,6 +65,7 @@
         <p>&copy; <span id="currentyear"></span> Aaron Uwem Edem | Nigeria</p>
         <p id="lastModified">Last Update:</p>
     </footer>
+
 </body>
 
 </html>
