--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -19,10 +19,12 @@
 </head>
 <body>
     <header>
-        <h1>Business Directory</h1>
-        <div class="view-buttons">
-            <button id="gridView"><img src="images/grid.png" alt="Grid View"></button>
-            <button id="listView"><img src="images/list.jpg" alt="List View"></button>
+        <div class="header-container">
+            <h1>Business Directory</h1>
+            <div class="view-buttons">
+                <button id="gridView" onclick="setView('grid')"><img src="images/grid.png" alt="Grid View"></button>
+                <button id="listView" onclick="setView('list')"><img src="images/list.jpg" alt="List View"></button>
+            </div>
         </div>
     </header>
     <main>
