--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,104 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Aaron Chamber of Commerce Home Page">
+    <meta name="description" content="Aaron Uwem Edem Chamber of Commerce">
+    <meta name="keywords" content="Chamber of Commerce, Business, Directory, Join, Events">
     <meta name="author" content="Aaron Uwem Edem">
-    <meta property="og:title" content="Aaron Chamber of Commerce">
-    <meta property="og:description" content="Join the Aaron Chamber of Commerce today!">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://yourwebsite.com/images/og-image.png">
-    <meta property="og:url" content="https://yourwebsite.com/index.html">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- Favicon -->
+    <title>Aaron Uwem Edem Chamber of Commerce</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="images/Hero1.jpg" type="image/x-icon">
-    <title>Aaron Chamber of Commerce</title>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Aaron Uwem Edem Chamber of Commerce">
+    <meta property="og:description" content="Join the Aaron Uwem Edem Chamber of Commerce and connect with local businesses.">
+    <meta property="og:image" content="images/hero3.jpg">
+    <meta property="og:url" content="https://yourwebsite.com">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Aaron Uwem Edem Chamber of Commerce">
+    <meta name="twitter:description" content="Join the Aaron Uwem Edem Chamber of Commerce and connect with local businesses.">
+    <meta name="twitter:image" content="images/hero3.jpg">
 </head>
 <body>
     <header>
         <div class="header-container">
-            <img src="images/logo.png" alt="Aaron Chamber of Commerce Logo" class="logo">
+            <img src="images/hero2.jpg" alt="Aaron Chamber of Commerce Logo" class="logo">
+            <h1>Aaron Chamber of Commerce</h1>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="directory.html">Directory</a>
-                <a href="about.html">About</a>
-                <a href="join.html">Join</a>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="directory.html">Directory</a></li>
+                    <li><a href="#">Join</a></li>
+                    <li><a href="#">Discover</a></li>
+                </ul>
             </nav>
         </div>
     </header>
 
     <main>
-        <!-- Hero Section -->
-        <section id="hero" class="hero-section">
-            <img src="images/Hero1.jpg" alt="Hero Image " class="hero-image">
-            <div class="hero-text">
-                <h2>Join the Aaron Chamber of Commerce</h2>
-                <a href="join.html" class="cta-button">Join Now</a>
+        <section class="hero">
+            <img src="images/hero3.jpg" alt="Chamber of Commerce" class="hero-image">
+            <button class="join-now">Join Now</button>
+        </section>
+
+        <section class="content">
+            <div class="events">
+                <h2>Upcoming Events</h2>
+                <p>Join us for our monthly networking events where local businesses can connect and collaborate. Our next event is scheduled for November 15, 2024, at 5 PM. Don't miss the chance to showcase your business and expand your network!</p>
+            </div>
+
+            <div class="weather">
+                <h2>Current Weather</h2>
+                <div class="weather-info"></div>
+            </div>
+
+            <div class="forecast">
+                <h2>Weather Forecast</h2>
+                <ul>
+                    <li>Friday: Sunny, High 30°C, Low 20°C</li>
+                    <li>Saturday: Partly Cloudy, High 28°C, Low 19°C</li>
+                    <li>Sunday: Rain Showers, High 25°C, Low 18°C</li>
+                </ul>
             </div>
         </section>
 
-        <!-- Flexbox layout for weather, forecast, and events -->
-        <section id="info-section">
-            <div class="flex-container">
-                <!-- Weather Section -->
-                <div class="weather-section">
-                    <h3>Current Weather</h3>
-                    <p id="current-temp">Loading...</p>
-                    <p id="weather-desc"></p>
-                    <h4>3-Day Forecast</h4>
-                    <ul id="forecast"></ul>
-                </div>
-
-                <!-- Current Events Section -->
-                <div class="events-section">
-                    <h3>Current Events</h3>
-                    <p>Upcoming Business Networking Event: October 15th, 2024</p>
-                    <!-- More events can be dynamically added here -->
-                </div>
-
-                <!-- Company Spotlights Section -->
-                <div class="spotlight-section">
-                    <h3>Company Spotlights</h3>
-                    <div id="spotlight-container">
-                        <!-- JavaScript will inject spotlight companies here -->
-                    </div>
-                </div>
-            </div>
+        <section class="spotlight">
+            <h2>Business Spotlight</h2>
+            <div class="spotlight-grid"></div>
+            <p>This month's spotlight is on local businesses that have made significant contributions to the community. Check out the featured businesses to learn more about their services and initiatives!</p>
         </section>
     </main>
 
-    <!-- Footer Section -->
     <footer>
-        <div class="footer-container">
-            <!-- Contact Information -->
-            <div class="contact-info">
-                <h4>Contact Us</h4>
-                <p>Aaron Chamber of Commerce</p>
-                <p>Gbenku Olodo garage, Ibadan, Nigeria</p>
-                <p>Email: gilbertaaron100@gmail.com</p>
-            </div>
-
-            <!-- Social Media Links -->
-            <div class="social-media">
-                <h4>Follow Us</h4>
-                <a href="https://facebook.com/aaron.gilbert.946179" target="_blank">
-                    <img src="images/facebook.png" alt="Facebook">
-                </a>
-                <a href="https://x.com/gilbert_edem" target="_blank">
-                    <img src="images/twitter.png" alt="Twitter">
-                </a>
-                <a href="https://www.linkedin.com/in/aaron-edem-42874a22b/" target="_blank">
-                    <img src="images/linkedin.png" alt="LinkedIn">
-                </a>
-            </div>
-
-            <!-- Footer Bottom Info -->
-            <div class="footer-bottom">
-                <p>&copy; 2024 Aaron Chamber of Commerce. All rights reserved.</p>
-                <p>Last modified: <span id="last-modified"></span></p>
-            </div>
+        <div class="footer-info">
+            <p>Aaron Chamber of Commerce</p>
+            <p>Gbenku Olodo Garage, Ibadan, Nigeria.</p>
+            <p>Email: gilbertaaron100@gmail.com | Phone: (234) 7084006136</p>
         </div>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/" target="_blank"><img src="images/twitter.png" alt="Twitter"></a>
+            <a href="https://www.linkedin.com/" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a>
+        </div>
+        <p>WDD231 Class Project | Last Modification: <span id="last-modification"></span></p>
     </footer>
 
-    <script src="js/weather.js" defer></script>
-    <script src="js/spotlight.js" defer></script>
+    <script src="js/weather.js"></script>
+    <script src="js/spotlight.js"></script>
+    <script>
+        document.getElementById('last-modification').textContent = document.lastModified;
+    </script>
 </body>
 </html>
