--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,36 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Business Directory">
+    <meta name="description" content="Business Directory of Aaron Uwem Edem Chamber of Commerce">
+    <meta name="keywords" content="Business Directory, Chamber of Commerce, Nigeria">
     <meta name="author" content="Aaron Uwem Edem">
-    <meta property="og:title" content="Business Directory">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://yourwebsite.com/images/og-image.png">
-    <meta property="og:url" content="https://yourwebsite.com/directory.html">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="manifest" href="images/site.webmanifest">
-    <title>Business Directory</title>
+    <title>Business Directory - Aaron Uwem Edem Chamber of Commerce</title>
 </head>
 <body>
     <header>
         <div class="header-container">
-            <h1>Business Directory</h1>
-            <div class="view-buttons">
-                <button id="gridView" onclick="setView('grid')"><img src="images/grid.png" alt="Grid View"></button>
-                <button id="listView" onclick="setView('list')"><img src="images/list.jpg" alt="List View"></button>
-            </div>
+            <img src="images/hero2.jpg" alt="Aaron Chamber of Commerce Logo" class="logo">
+            <h1>Directory</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="directory.html">Directory</a></li>
+                    <li><a href="join.html">Join</a></li>
+                    <li><a href="#">Discover</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
+
     <main>
-        <section id="directory"></section>
+        <section class="view-options">
+            <button id="gridView">Grid View</button>
+            <button id="listView">List View</button>
+        </section>
+
+        <section id="directory-container" class="grid-view">
+            <!-- The business items will be dynamically inserted here -->
+        </section>
     </main>
+
     <footer>
-        <p>Developed by Aaron Uwem Edem for WDD 231. Last modified: <span id="last-modified"></span></p>
+        <div class="footer-info">
+            <p>Aaron Uwem Edem Chamber of Commerce</p>
+            <p>Gbenku olodo garage, Ibadan Nigeria.</p>
+            <p>Email: gilbertaaron100@gmail.com | Phone: (234) 7084006136</p>
+        </div>
+        <div class="social-icons">
+            <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.twitter.com" target="_blank"><img src="images/twitter.png" alt="Twitter"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a>
+        </div>
+        <p>WDD231 Class Project | Last Modification: <span id="last-modification"></span></p>
     </footer>
-    <script src="js/script.js" defer></script>
+
+    <script src="js/script.js"></script>
+    <script>
+        document.getElementById('last-modification').textContent = document.lastModified;
+    </script>
 </body>
 </html>
