--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Chamber</a></li>
+                <li><a href="/chamber/index.html">Chamber</a></li>
                 <li><a href="https://github.com/ugedem" target="_blank">GitHub Profile</a></li>
                 <li><a href="https://www.linkedin.com/in/aaron-edem-42874a22b" target="_blank">LinkedIn</a></li>
             </ul>
