--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="#">Discover</a></li>
+                    <li><a href="discover.html">Discover</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,7 +41,7 @@
         <div class="footer-info">
             <p>Aaron Uwem Edem Chamber of Commerce</p>
             <p>Gbenku olodo garage, Ibadan Nigeria.</p>
-            <p>Email: gilbertaaron100@gmail.com | Phone: (234) 7084006136</p>
+            <p>Email: gilbertaaron100@gmail.com | Phone:234 7084006136</p>
         </div>
         <div class="social-icons">
             <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
