--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -55,7 +55,7 @@
     <div class="footer-info">
       <p>Aaron Uwem Edem Chamber of Commerce</p>
       <p>Gbenku olodo garage, Ibadan Nigeria.</p>
-      <p>Email: gilbertaaron100@gmail.com | Phone: 234 7084006136</p>
+      <p>Email: gilbertaaron100@gmail.com | Phone: (234) 7084006136</p>
     </div>
     <div class="social-icons">
       <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
