--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Aaron Uwem Edem Chamber of Commerce - Connecting businesses in Nigeria for growth and collaboration.">
     <meta name="keywords" content="Chamber of Commerce, Businesses, Nigeria, Networking, Community">
     <meta name="author" content="Aaron Uwem Edem">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="style/styles.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>Aaron Uwem Edem Chamber of Commerce</title>
 </head>
