--- a/chamber/join.html
+++ b/chamber/join.html
@@ -14,9 +14,7 @@
     <meta property="og:url" content="https://yourwebsite.com/join.html">
     <meta property="og:image" content="https://yourwebsite.com/images/chamber-image.jpg">
     <link rel="icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="css/styles.css">
-    <style>
-       
+    <link rel="stylesheet" href="style/styles.css">
         h1 {
             text-align: center;
             font-size: 3rem;
