--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Business Directory of Aaron Uwem Edem Chamber of Commerce">
   <meta name="keywords" content="Business Directory, Chamber of Commerce, Nigeria">
   <meta name="author" content="Aaron Uwem Edem">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="style/styles.css">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <title>Discover - Aaron Uwem Edem Chamber of Commerce</title>
 </head>
