--- a/siteplan.html
+++ b/siteplan.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Mkpouto Cuisine celebrates the rich flavors and traditions of Calabar cuisine through recipes, cultural stories, and restaurant recommendations.">
     <title>Mkpouto Cuisine</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/mkpouto.css">
 </head>
 <body>
     <header>
