--- a/siteplan.html
+++ b/siteplan.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Mkpouto Cuisine celebrates the rich flavors and traditions of Calabar cuisine through recipes, cultural stories, and restaurant recommendations.">
     <title>Mkpouto Cuisine</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/mkpouto.css">
+    <link rel="stylesheet" href="css/mkpouto.css">
 </head>
 <body>
     <header>
@@ -54,10 +54,10 @@
 
         <div class="wireframe">
             <h3>Mobile View</h3>
-            <img src="/pictures/mobile.jpeg" alt="Mobile Wireframe">
+            <img src="pictures/mobile.jpeg" alt="Mobile Wireframe">
             
             <h3>Desktop View</h3>
-            <img src="/pictures/desktop.jpeg" alt="Desktop Wireframe">
+            <img src="pictures/desktop.jpeg" alt="Desktop Wireframe">
         </div>
     </section>
 
