--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -22,7 +22,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="directory.html">Directory</a></li>
           <li><a href="join.html">Join</a></li>
-          <li><a href="discover.html" class="active">Discover</a></li>
+          <li><a href="discover.html" class="active">Discover!</a></li>
         </ul>
       </nav>
     </div>
