--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="profile-header">
-            <img src="images/myself.jpg" alt="Aaron Uwem Edem Profile">
+            <img src="pictures/myself.jpg" alt="Aaron Uwem Edem Profile">
             <h1>Aaron Uwem Edem</h1>
         </div>
         <nav>
@@ -43,7 +43,7 @@
 
         <section class="location">
             <h2>Ibadan, Nigeria</h2>
-            <img src="images/pngwing.com.png" alt="Nigeria">
+            <img src="pictures/pngwing.com.png" alt="Nigeria">
             <p>Naija Flag</p>
         </section>
 
