--- a/contact.html
+++ b/contact.html
@@ -62,9 +62,9 @@
 <footer>
     <p>&copy; 2024 Mkpouto Cuisine. All Rights Reserved.</p>
     <div id="social-media">
-        <a href="https://web.facebook.com/?_rdc=1&_rdr" aria-label="Facebook"><img src="/pictures/facebook.png" alt="Facebook"></a>
-        <a href="https://x.com/?mx=2" aria-label="Twitter"><img src="/pictures/twitter.png" alt="Twitter"></a>
-        <a href="https://www.instagram.com/" aria-label="Instagram"><img src="/pictures/instagram.png" alt="Instagram"></a>
+        <a href="https://web.facebook.com/?_rdc=1&_rdr" aria-label="Facebook"><img src="pictures/facebook.png" alt="Facebook"></a>
+        <a href="https://x.com/?mx=2" aria-label="Twitter"><img src="pictures/twitter.png" alt="Twitter"></a>
+        <a href="https://www.instagram.com/" aria-label="Instagram"><img src="pictures/instagram.png" alt="Instagram"></a>
     </div>
 </footer>
 
