--- a/menu.html
+++ b/menu.html
@@ -32,42 +32,42 @@
         <section class="menu-grid">
             <!-- Food Items with images and details -->
             <div class="menu-item">
-                <img src="/pictures/Edikang ikong.jpeg" alt="Edikang Ikong Soup">
+                <img src="pictures/Edikang ikong.jpeg" alt="Edikang Ikong Soup">
                 <div class="menu-info">
                     <h2>Edikang Ikong Soup</h2>
                     <p>Small: ₦1200 | Medium: ₦2000 | Large: ₦3000</p>
                 </div>
             </div>
             <div class="menu-item">
-                <img src="/pictures/Afia efere.jpeg" alt="Afia Efere">
+                <img src="pictures/Afia efere.jpeg" alt="Afia Efere">
                 <div class="menu-info">
                     <h2>Afia Efere</h2>
                     <p>Small: ₦1200 | Medium: ₦2000 | Large: ₦3000</p>
                 </div>
             </div>
             <div class="menu-item">
-                <img src="/pictures/Ekpang nkwukwo.jpeg" alt="Ekpang Nkwukwo">
+                <img src="pictures/Ekpang nkwukwo.jpeg" alt="Ekpang Nkwukwo">
                 <div class="menu-info">
                     <h2>Ekpang Nkwukwo</h2>
                     <p>Small: ₦1200 | Medium: ₦2000 | Large: ₦3000</p>
                 </div>
             </div>
             <div class="menu-item">
-                <img src="/pictures/Afang.jpg" alt="Afang Soup">
+                <img src="pictures/Afang.jpg" alt="Afang Soup">
                 <div class="menu-info">
                     <h2>Afang Soup</h2>
                     <p>Small: ₦1200 | Medium: ₦2000 | Large: ₦3000</p>
                 </div>
             </div>
             <div class="menu-item">
-                <img src="/pictures/Ogbono.jpeg" alt="Ogbono Soup">
+                <img src="pictures/Ogbono.jpeg" alt="Ogbono Soup">
                 <div class="menu-info">
                     <h2>Ogbono Soup</h2>
                     <p>Small: ₦1200 | Medium: ₦2000 | Large: ₦3000</p>
                 </div>
             </div>
             <div class="menu-item">
-                <img src="/pictures/Banga.jpeg" alt="Banga Soup">
+                <img src="pictures/Banga.jpeg" alt="Banga Soup">
                 <div class="menu-info">
                     <h2>Banga Soup</h2>
                     <p>Small: ₦1200 | Medium: ₦2000 | Large: ₦3000</p>
