--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Aaron Uwem Edem">
     <link rel="stylesheet" href="css/mkpoutoI.css">
     <link rel="apple-touch-icon" sizes="180x180" href="pictures/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/pictures/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/pictures/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="pictures/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="pictures/favicon-16x16.png">
     <link rel="manifest" href="pictures/site.webmanifest">
     <meta property="og:title" content="Mkpouto Cuisine">
     <meta property="og:description" content="Authentic Calabar Cuisine at Mkpouto Cuisine.">
