--- a/indexi.html
+++ b/indexi.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="pictures/site.webmanifest">
     <meta property="og:title" content="Mkpouto Cuisine">
     <meta property="og:description" content="Authentic Calabar Cuisine at Mkpouto Cuisine.">
-    <meta property="og:image" content="images/og-image.jpg">
+    <meta property="og:image" content="pictures/og-image.jpg">
    
 </head>
 <body>
