--- a/order.html
+++ b/order.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="pictures/site.webmanifest">
     <meta property="og:title" content="Mkpouto Cuisine">
     <meta property="og:description" content="Authentic Calabar Cuisine at Mkpouto Cuisine.">
-    <meta property="og:image" content="images/og-image.jpg">
+    <meta property="og:image" content="pictures/og-image.jpg">
 </head>
 <body>
     <header>
@@ -38,12 +38,12 @@
             </div>
             <div class="form-group">
                 <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="phone" required>
+                <input type="tel" id="phone" name="phone" required pattern="0[7-9][0-1][0-9]{8}" placeholder="e.g., 07012345678">
             </div>
             <div class="form-group">
                 <label for="food">Select Dish</label>
                 <select id="food" name="food" required>
-                    <!-- Automactically populated from menu.json -->
+                    <!-- Automatically populated from menu.json -->
                 </select>
             </div>
             <div class="form-group">
@@ -63,14 +63,17 @@
     </div>
     
     <footer>
-        <p>&copy; 2024 Mkpouto Cuisine. All Rights Reserved.</p>
+        <p>&copy; <span id="year"></span> Mkpouto Cuisine. All Rights Reserved.</p>
         <div id="social-media">
-            <a href="https://web.facebook.com/?_rdc=1&_rdr" aria-label="Facebook"><img src="pictures/facebook.png" alt="Facebook"></a>
-            <a href="https://x.com/?mx=2" aria-label="Twitter"><img src="pictures/twitter.png" alt="Twitter"></a>
-            <a href="https://www.instagram.com/" aria-label="Instagram"><img src="pictures/instagram.png" alt="Instagram"></a>
+            <a href="https://web.facebook.com/?_rdc=1&_rdr" aria-label="Facebook"><img src="pictures/facebook.png" alt="Facebook logo"></a>
+            <a href="https://x.com/?mx=2" aria-label="Twitter"><img src="pictures/twitter.png" alt="Twitter logo"></a>
+            <a href="https://www.instagram.com/" aria-label="Instagram"><img src="pictures/instagram.png" alt="Instagram logo"></a>
         </div>
     </footer>
     
     <script src="scripts/order.js"></script>
+    <script>
+        document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
