--- a/order.html
+++ b/order.html
@@ -43,12 +43,14 @@
             <div class="form-group">
                 <label for="food">Select Dish</label>
                 <select id="food" name="food" required>
+                    <option value="" disabled selected>Select a dish</option>
                     <!-- Automatically populated from menu.json -->
                 </select>
             </div>
             <div class="form-group">
                 <label for="size">Size</label>
                 <select id="size" name="size" required>
+                    <option value="" disabled selected>Select size</option>
                     <option value="small">Small - ₦1200</option>
                     <option value="medium">Medium - ₦2000</option>
                     <option value="large">Large - ₦3000</option>
