--- a/indexi.html
+++ b/indexi.html
@@ -46,6 +46,8 @@
         <section id="map-container">
             <h2>Find Us</h2>
             <div id="map" aria-label="Compass direction"></div>
+            <span id="map-label" class="visually-hidden">Compass direction</span>
+
         </section>
     </main>
     <footer>
