--- a/indexi.html
+++ b/indexi.html
@@ -45,8 +45,9 @@
         </section>
         <section id="map-container">
             <h2>Find Us</h2>
-            <div id="map" aria-label="Compass direction"></div>
-            <span id="map-label" class="visually-hidden">Compass direction</span>
+            <div id="map" aria-labelledby="map-title"></div>
+            </section>
+            
 
         </section>
     </main>
