week 5 updated site

--- a/siteplan.html
+++ b/siteplan.html
@@ -34,8 +34,8 @@
             <h3>Color Schema:</h3>
             <p>The following colors were selected for the website:</p>
             <ul>
-                <li><strong>Primary Color:</strong> Green (<span style="color: #2E8B57;">#2E8B57</span>) - Used for headings, buttons, and accents.</li>
-                <li><strong>Secondary Color:</strong> Cream (<span style="background-color: #FFFDD0;">#FFFDD0</span>) - Used as the background color to give the site a warm and inviting atmosphere.</li>
+                <li><strong>Primary Color:</strong> Green (<span style="color: #0c4a0d;">#0c4a0d</span>) - Used for headings, buttons, and accents.</li>
+                <li><strong>Secondary Color:</strong> Cream (<span style="background-color: #a8b8a3;">#a8b8a3</span>) - Used as the background color to give the site a warm and inviting atmosphere.</li>
             </ul>
 
             <h3>Typography:</h3>
