--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -43,6 +43,7 @@
       </aside>
 
       <section class="main-content">
+        <h2>Main Content</h2> <!-- Added a heading to the main content section -->
         <section class="gallery">
           <h2>Local Attractions</h2>
           <div class="spotlight-grid" id="spotlight-members"></div>
